--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -11,34 +11,36 @@
 }
 else
 {
-    <Grid DataProvider="ProjectDataProvider" TItem="Project" AllowPaging="true" PageSize="15" AllowSorting="true">
-    <GridColumn TItem="Project" HeaderText="Id">
+<Grid DataProvider="ProjectDataProvider" TItem="Project" AllowPaging="true" PageSize="15" AllowSorting="true">
+    <GridColumn TItem="Project" HeaderText="Id" SortKeySelector=" Item => Item.Id">
         @context.Id
     </GridColumn>
-     <GridColumn TItem="Project" HeaderText="Projekt">
+     <GridColumn TItem="Project" HeaderText="Projekt" SortKeySelector=" Item => Item.Name">
         @context.Name
     </GridColumn>
      <GridColumn TItem="Project" HeaderText="Beskrivelse">
         @context.Description
     </GridColumn>
-     <GridColumn TItem="Project" HeaderText="Projekttype">
+     <GridColumn TItem="Project" HeaderText="Projekttype" SortKeySelector=" Item => Item.ProjectType">
         @context.ProjectType.ToString()
     </GridColumn>
-     <GridColumn TItem="Project" HeaderText="Prioritet">
+     <GridColumn TItem="Project" HeaderText="Prioritet" SortKeySelector=" Item => Item.Priority">
         @context.Priority.ToString()
     </GridColumn>
-     <GridColumn TItem="Project" HeaderText="Status">
+     <GridColumn TItem="Project" HeaderText="Status" SortKeySelector=" Item => Item.Status">
         @context.Status.ToString()
     </GridColumn>
+
+
 </Grid>
 }
 
 @code{
-    private IEnumerable<Project>? Projects { get; set; } = null;
+    private ICollection<Project>? Projects { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        Projects = await _httpClient.GetFromJsonAsync<IEnumerable<Project>>("https://localhost:7282/api/project/getall");
+        Projects = await _httpClient.GetFromJsonAsync<ICollection<Project>>("https://localhost:7282/api/project/getall");
     }
 
     private async Task<GridDataProviderResult<Project>> ProjectDataProvider(GridDataProviderRequest<Project> request)
