Added some gridlayout to phasedetails

--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -11,7 +11,10 @@
 }
 else
 {
-    <Button Color="ButtonColor.Primary">Opret</Button>
+    <div style="margin:5px">
+        <Button Color="ButtonColor.Primary">Opret projekter</Button>
+        <Button Color="ButtonColor.Primary">Opret faser</Button>
+    </div>
     <Grid DataProvider="ProjectDataProvider"   HeaderRowCssClass="bg-secondary text-white border-bottom-0" TItem="Project" AllowPaging="true" PageSize="12" AllowSorting="true">
         <GridColumn TItem="Project" HeaderText="Id" SortKeySelector=" Item => Item.Id">
             @context.Id
