Minor fix in index.razor

--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -12,8 +12,8 @@
 else
 {
     <div style="margin:5px">
-        <Button Color="ButtonColor.Primary">Opret projekter</Button>
-        <Button Color="ButtonColor.Primary">Opret faser</Button>
+        <Button Color="ButtonColor.Primary">Opret projekt</Button>
+        <Button Color="ButtonColor.Primary">Opret fase</Button>
     </div>
     <Grid DataProvider="ProjectDataProvider"   HeaderRowCssClass="bg-secondary text-white border-bottom-0" TItem="Project" AllowPaging="true" PageSize="12" AllowSorting="true">
         <GridColumn TItem="Project" HeaderText="Id" SortKeySelector=" Item => Item.Id">
