--- a/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
+++ b/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
@@ -2,63 +2,98 @@
 @using KOMiT.Core.Model;
 @inject HttpClient _httpClient
 
-<div class="parent">
-    <div style="background-color:aliceblue" class="div1">
-        <p>
-            @_project.Name
-            <Tooltip Title="@_project.Description">
-                <Icon Name="IconName.InfoCircleFill" Color="IconColor.Primary" />
-            </Tooltip>
-        </p>
-        <p>
-            Status: @_project.Status.ToString()
-            @if (_project.Status == Core.Model.Enum.Status.Aktiv)
-            {
-                    <Icon Name="IconName.CircleFill" Color="IconColor.Warning" />
-            }
-            else if (_project.Status == Core.Model.Enum.Status.Inaktiv)
-            {
-                    <Icon Name="IconName.CircleFill" Color="IconColor.Danger" />
-            }
-            else
-            {
-                    <Icon Name="IconName.CircleFill" Color="IconColor.Success" />
-            }
-        </p>
+
+    <div class="parent">
+        <div class="div1">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <b>Projekt: @_project.Name</b>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b>Startdato: @_project.EstimatedStartDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b>Slutdato: @_project.EstimatedEndDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div style="background-color:aliceblue" class="div2">
-        <p>Delmål i alt</p>
-        <p>Status:</p>
-        <table style="width: 100%;">
-            <tbody>
-                <tr>
-                    <td>Estimeret: dage</td>
-                </tr>
-                <tr>
-                    <td>Realiseret: dage</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div style="background-color:aliceblue" class="div3">
-        <p>Opgaver i alt</p>
-        <p>Status:</p>
-        <table style="width: 100%;">
-            <tbody>
-                <tr>
-                    <td>Estimeret: dage</td>
-                </tr>
-                <tr>
-                    <td>Realiseret: dage</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div style="background-color:aliceblue" class="div4">4 </div>
-    <div style="background-color:aliceblue" class="div5"> 5</div>
-    <div style="background-color:aliceblue" class="div6">6 </div>
-    <div style="background-color:aliceblue" class="div7"> 7</div>
-</div>
+
+    <table class="main-table">
+        <tbody>
+            <tr>
+                <td> </td>
+                @*Indsæt href for at navigere til anden side fx <td><a href="#" class="is-link">Opstartsfase</a></td>*@
+                <td><a class="is-link">Opstartsfase</a></td> 
+                <td><a class="is-link">Kravindsamling</a></td>
+                <td><a class="is-link">High-level design</a></td>
+                <td><a class="is-link">Low-level design</a></td>
+                <td><a class="is-link">Programmering</a></td>
+                <td><a class="is-link">Testing</a></td>
+            </tr>
+            <tr>
+                <td class="bold-text">Status:</td>
+                <td>2,2</td>
+                <td>2,3</td>
+                <td>2,4</td>
+                <td>2,5</td>
+                <td>2,6</td>
+                <td>2,7</td>
+                <td>2,8</td>
+            </tr>
+            <tr>
+                <td class="bold-text">Estimeret dage:</td>
+                <td>3,2</td>
+                <td>3,3</td>
+                <td>3,4</td>
+                <td>3,5</td>
+                <td>3,6</td>
+                <td>3,7</td>
+                <td>3,8</td>
+            </tr>
+            <tr>
+                <td class="bold-text">Realiseret dage:</td>
+                <td>4,2</td>
+                <td>4,3</td>
+                <td>4,4</td>
+                <td>4,5</td>
+                <td>4,6</td>
+                <td>4,7</td>
+                <td>4,8</td>
+            </tr>
+        </tbody>
+    </table>
+
+<style>
+    .main-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+        background-color:aliceblue;
+    }
+
+    .main-table, .main-table th, .main-table td {
+        border: 1px solid black;
+    }
+
+    .main-table th, .main-table td {
+        padding: 10px;
+        text-align: left;
+    }
+
+    .bold-text {
+        font-weight: bold; 
+    }
+</style>
+
 
 @code {
 
