--- a/KOMiT/KOMiT.Client/Shared/MainLayout.razor
+++ b/KOMiT/KOMiT.Client/Shared/MainLayout.razor
@@ -3,8 +3,9 @@
 <div class="bb-page">
 
     <Sidebar @ref="sidebar"
-             IconName="IconName.BootstrapFill"
-             Title="Blazor Bootstrap"
+             IconName="IconName.Tools"
+             Title="KOMiT PMT"
+             BadgeText="v1.0 beta"
              DataProvider="SidebarDataProvider" />
 
     <main>
@@ -24,6 +25,7 @@
 @code {
     private Sidebar sidebar = default!;
     private IEnumerable<NavItem> navItems = default!;
+    bool applyPurpleStyle = true;
 
     private async Task<SidebarDataProviderResult> SidebarDataProvider(SidebarDataProviderRequest request)
     {
@@ -37,13 +39,41 @@
     {
         navItems = new List<NavItem>
         {
-            new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, Text = "Projekter", Match=NavLinkMatch.All},
-            new NavItem { Id = "2", Href = "/counter", IconName = IconName.PlusSquareFill, Text = "Counter"},
-            new NavItem { Id = "3", Href = "/fetchdata", IconName = IconName.Table, Text = "Fetch Data"},
-            new NavItem { Id = "4", Href = "/swagger", IconName = IconName.Table, Text = "swagger"},
+            new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, IconColor = IconColor.Primary, Text = "Projekter", Match=NavLinkMatch.All},
+            new NavItem { Id = "2", Href = "/counter", IconName = IconName.PeopleFill,IconColor = IconColor.Primary, Text = "Ansatte"},
+            new NavItem { Id = "3", Href = "/fetchdata", IconName = IconName.FileEarmarkArrowDownFill,IconColor = IconColor.Primary, Text = "Rapport"},
+            new NavItem { Id = "4", Href = "/swagger", IconName = IconName.DatabaseFillExclamation, IconColor = IconColor.Primary, Text = "swagger"},
         };
 
 
         return navItems;
     }
+}
+
+@if (applyPurpleStyle)
+{
+    <style>
+        :root {
+            --bb-sidebar-width: 270px;
+            --bb-sidebar-collapsed-width: 50px;
+            --bb-sidebar-background-color: rgba(234, 234, 234, 1);
+            --bb-sidebar-top-row-background-color: rgba(0,0,0,0.08);
+            --bb-sidebar-top-row-border-color: rgb(194,192,192);
+            --bb-sidebar-title-text-color: rgb(0,0,0);
+            --bb-sidebar-brand-icon-color: #0076C2;
+            --bb-sidebar-brand-image-width: 24px;
+            --bb-sidebar-brand-image-height: 24px;
+            --bb-sidebar-title-badge-text-color: rgb(255,255,255);
+            --bb-sidebar-title-badge-background-color: rgba(25,135,84,var(--bs-bg-opacity,1));
+            --bb-sidebar-navbar-toggler-icon-color: rgb(0,0,0);
+            --bb-sidebar-navbar-toggler-background-color: rgba(0,0,0,0.08);
+            --bb-sidebar-content-border-color: rgb(194,192,192);
+            --bb-sidebar-nav-item-text-color: rgba(0,0,0,0.9);
+            --bb-sidebar-nav-item-text-active-color-rgb: 0,0,0;
+            --bb-sidebar-nav-item-text-hover-color: rgba(var(--bb-sidebar-nav-item-text-active-color-rgb),0.9);
+            --bb-sidebar-nav-item-text-active-color: rgba(var(--bb-sidebar-nav-item-text-active-color-rgb),0.9);
+            --bb-sidebar-nav-item-background-hover-color: rgba(var(--bb-sidebar-nav-item-text-active-color-rgb),0.08);
+            --bb-sidebar-nav-item-group-background-color: rgba(var(--bb-sidebar-nav-item-text-active-color-rgb),0.08);
+        }
+    </style>
 }
