--- a/KOMiT/KOMiT.Client/_Imports.razor
+++ b/KOMiT/KOMiT.Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using KOMiT.Client
 @using KOMiT.Client.Shared
 @using BlazorBootstrap;
+@using KOMiT.Core.Model;
+@using KOMiT.Client.Components
+
