--- a/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
+++ b/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
@@ -15,7 +15,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label >Længde</label>
+                <label >Beskrivelse</label>
                 <input @bind-value="standardPhase.Description" class="form-control" />
                 <span asp-validation-for="Beskrivelse" class="text-danger"></span>
             </div>
@@ -34,7 +34,7 @@
 
         if (response.IsSuccessStatusCode)
         {
-            navManger.NavigateTo("/CreatePhase");
+            navManger.NavigateTo("/");
         }
     }
 }
