--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @inject HttpClient _httpClient
-@inject NavigationManager NavigationManager
+@inject NavigationManager navigationManager
 
 
 
@@ -111,8 +111,10 @@ else
                 }
         </GridColumn>
         </Grid>
-
+        
     }
+    
+    
 
 @code {
     private ICollection<Project>? Projects { get; set; }
@@ -131,12 +133,12 @@ else
 
     private void PhaseDetails(int ID)
     {
-        NavigationManager.NavigateTo($"/phasedetails/{ID}");
+        navigationManager.NavigateTo($"/phasedetails/{ID}");
     }
-      
+     
     private void ProjectDetails(int ID)
     {
-        NavigationManager.NavigateTo($"/projectdetails/{ID}");
+        navigationManager.NavigateTo($"/projectdetails/{ID}");
 
     }
 
@@ -149,7 +151,6 @@ else
     {
         await modal?.HideAsync();
 
-}
+    }
 
-
-
+    }
