Added create currentsubgoal and finish currentsubgoal

--- a/KOMiT/KOMiT.Client/Pages/PhaseDetails.razor
+++ b/KOMiT/KOMiT.Client/Pages/PhaseDetails.razor
@@ -1,6 +1,7 @@
 ﻿@page "/phasedetails/{ID:int}"
 @using KOMiT.Core.DTO_s;
 @using KOMiT.Core.Model;
+@using KOMiT.Client.Components;
 @inject HttpClient _httpClient
 
 @if (_currentPhase == null && _estimatedAndRealizedDaysDTO == null)
@@ -10,8 +11,18 @@
 else
 {
 <div style="margin:5px">
-    <Button Color="ButtonColor.Primary">Tilføj delmål</Button>
+    <Button @onclick="OnShowModalClick" Color="ButtonColor.Primary">Tilføj delmål</Button>
     <Button Color="ButtonColor.Primary">Tilføj projektdeltagere</Button>
+        <Modal @ref="modal" Title="Opret delmål">
+            <BodyTemplate>
+                <CreateCurrentSubGoal ID="ID" OnClick="OnHideModalClick"></CreateCurrentSubGoal>
+            </BodyTemplate>
+        </Modal>
+        <Modal @ref="modalFinishCurrentSubGoal">
+            <BodyTemplate>
+                <FinishCurrentSubGoal ID="ID" CurrentSubGoal="_selectedCurrentSubGoal" OnClick="OnHideModalFinishCurrentSubGoalClick"></FinishCurrentSubGoal>
+            </BodyTemplate>
+        </Modal>
 </div>
 
 <div class="parent">
@@ -86,7 +97,10 @@ else
             @foreach (var currentSubGoal in _currentPhase.CurrentSubGoals)
             {
                 <div style="float: left;">
-                    <div style="width: 150px; height: 110px; background-color: #DBE5FF; border: 1px solid #808080;">
+                    <div style="width: 150px; height: 130px; background-color: #DBE5FF; border: 1px solid #808080;">
+                        @{
+                            _selectedCurrentSubGoal = currentSubGoal;
+                        }
                         <div style="text-align:center"><b>@currentSubGoal.Name</b></div>
                         <div style="text-align:center">@currentSubGoal.EstimatedEndDate.ToShortDateString()</div>
                         <div style="text-align:center">Status: @currentSubGoal.Status.ToString()
@@ -118,7 +132,7 @@ else
                                         <DropdownItem To="#" Type="ButtonType.Link">
                                             <Icon Name="IconName.PlusCircleDotted" Color="IconColor.Primary" /> Opret opgave
                                         </DropdownItem>
-                                        <DropdownItem To="#" Type="ButtonType.Link">
+                                        <DropdownItem @onclick="OnShowModalFinishCurrentSubGoalClick" Type="ButtonType.Link">
                                             <Icon Name="IconName.CheckSquareFill" Color="IconColor.Primary" /> Afslut
                                         </DropdownItem>
                                         <DropdownItem To="#" Type="ButtonType.Link">
@@ -263,9 +277,11 @@ else
 
     private BarChart barChartCurrentSubGoals;
     private BarChart barChartCurrentTasks;
-
     private CurrentPhase? _currentPhase;
     private EstimatedAndRealizedDaysDTO? _estimatedAndRealizedDaysDTO;
+    private Modal modal;
+    private Modal modalFinishCurrentSubGoal;
+    private CurrentSubGoal _selectedCurrentSubGoal;
 
     protected override async Task OnInitializedAsync()
     {
@@ -434,7 +450,25 @@ else
         return LabelsList;
     }
 
+    private async Task OnShowModalClick()
+    {
+        await modal?.ShowAsync();
+    }
 
+    private async Task OnHideModalClick()
+    {
+        await modal?.HideAsync();
+    }
+
+     private async Task OnShowModalFinishCurrentSubGoalClick()
+    {
+        await modalFinishCurrentSubGoal?.ShowAsync();
+    }
+
+    private async Task OnHideModalFinishCurrentSubGoalClick()
+    {
+        await modalFinishCurrentSubGoal?.HideAsync();
+    }
 }
 
    
