--- a/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
+++ b/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
@@ -3,36 +3,37 @@
 @inject HttpClient _httpClient
 
 
-    <div class="parent">
-        <div class="div1">
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            <b>Projekt: @_project.Name</b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <b>Startdato: @_project.EstimatedStartDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <b>Slutdato: @_project.EstimatedEndDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+<div class="parent">
+    <div class="div1">
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <b>Projekt: @_project.Name</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>Startdato: @_project.EstimatedStartDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>Slutdato: @_project.EstimatedEndDate.ToShortDateString() <Icon Name="IconName.Calendar" Color="IconColor.Primary"></Icon></b>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+</div>
 
+<div style="margin-bottom: 30px;">
     <table class="main-table">
         <tbody>
             <tr>
                 <td> </td>
                 @*Indsæt href for at navigere til anden side fx <td><a href="#" class="is-link">Opstartsfase</a></td>*@
-                <td><a class="is-link">Opstartsfase</a></td> 
+                <td><a class="is-link">Opstartsfase</a></td>
                 <td><a class="is-link">Kravindsamling</a></td>
                 <td><a class="is-link">High-level design</a></td>
                 <td><a class="is-link">Low-level design</a></td>
@@ -71,26 +72,29 @@
             </tr>
         </tbody>
     </table>
+</div>
+
+<PieChart @ref="pieChart" Width="500" Class="mb-5" />
 
 <style>
     .main-table {
         width: 100%;
         border-collapse: collapse;
         margin-top: 20px;
-        background-color:aliceblue;
+/*        background-color: aliceblue;*/
     }
 
-    .main-table, .main-table th, .main-table td {
-        border: 1px solid black;
-    }
+        .main-table, .main-table th, .main-table td {
+            border: 1px solid black;
+        }
 
-    .main-table th, .main-table td {
-        padding: 10px;
-        text-align: left;
-    }
+            .main-table th, .main-table td {
+                padding: 10px;
+                text-align: left;
+            }
 
     .bold-text {
-        font-weight: bold; 
+        font-weight: bold;
     }
 </style>
 
@@ -106,5 +110,71 @@
     {
         _project = await _httpClient.GetFromJsonAsync<Project>($"https://localhost:7282/api/project/GetDetailsById/{ID}");
     }
+
+    private PieChart pieChart = default!;
+    private PieChartOptions pieChartOptions = default!;
+    private ChartData chartData = default!;
+    private string[]? backgroundColors;
+
+    private int datasetsCount = 0;
+    private int dataLabelsCount = 0;
+
+    protected override void OnInitialized()
+    {
+        backgroundColors = ColorBuilder.CategoricalTwelveColors;
+        chartData = new ChartData { Labels = GetDefaultDataLabels(2), Datasets = GetDefaultDataSets() };
+
+        pieChartOptions = new();
+        pieChartOptions.Responsive = true;
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await pieChart.InitializeAsync(chartData, pieChartOptions);
+        }
+        await base.OnAfterRenderAsync(firstRender);
+    }
+
+
+    private List<IChartDataset> GetDefaultDataSets()
+    {
+        var datasets = new List<IChartDataset>();
+
+        datasets.Add(new PieChartDataset
+            {
+                Label = "Dage",
+                Data = new List<double> { 50, 45 },
+                BackgroundColor = GetRandomBackgroundColors()
+            });
+
+        return datasets;
+    }
+
+    private List<string> GetRandomBackgroundColors()
+    {
+        var colors = new List<string>();
+        for (var index = 0; index < dataLabelsCount; index++)
+        {
+            colors.Add(backgroundColors![index]);
+        }
+
+        return colors;
+    }
+
+    private List<string> GetDefaultDataLabels(int numberOfLabels)
+    {
+        var labels = new List<string>();
+        for (var index = 0; index < numberOfLabels; index++)
+        {
+            labels.Add(GetNextDataLabel());
+            dataLabelsCount += 1;
+        }
+
+        return labels;
+    }
+
+    private string GetNextDataLabel() => dataLabelsCount == 0 ? "Realiserede dage" : "Estimerede dage";
 
 }
