--- a/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
+++ b/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
@@ -74,14 +74,24 @@
     </table>
 </div>
 
-<PieChart @ref="pieChart" Width="500" Class="mb-5" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-5">
+            <PieChart @ref="pieChart" Width="450" />
+        </div>
+        <div class="col-md-7">
+            <LineChart @ref="lineChart" Width="850" />
+        </div>
+    </div>
+</div>
+
 
 <style>
     .main-table {
         width: 100%;
         border-collapse: collapse;
         margin-top: 20px;
-/*        background-color: aliceblue;*/
+        background-color: aliceblue;
     }
 
         .main-table, .main-table th, .main-table td {
@@ -133,6 +143,7 @@
         if (firstRender)
         {
             await pieChart.InitializeAsync(chartData, pieChartOptions);
+            await RenderWormAsync();
         }
         await base.OnAfterRenderAsync(firstRender);
     }
@@ -177,4 +188,59 @@
 
     private string GetNextDataLabel() => dataLabelsCount == 0 ? "Realiserede dage" : "Estimerede dage";
 
+
+    private LineChart lineChart;
+
+    private async Task RenderWormAsync()
+    {
+        var data = new ChartData
+            {
+                Labels = new List<string> { "Opstartsfasen", "Kravindsamling", "High-level Design", "Low-level Design", "Programmering", "Testing"},
+                Datasets = new List<IChartDataset>()
+            {
+                new LineChartDataset()
+                {
+                    Label = "Realiserede dage",
+                    Data = new List<double>{ 9, 20, 29, 33, 50, 66 },
+                    BackgroundColor = new List<string>{ "#20c997" },
+                    BorderColor = new List<string>{ "#20c997" },
+                    BorderWidth = new List<double>{2},
+                    HoverBorderWidth = new List<double>{4},
+                    PointBackgroundColor = new List<string>{ "#20c997" },
+                    PointBorderColor = new List<string>{ "#20c997" },
+                    PointRadius = new List<int>{0}, 
+                    PointHoverRadius = new List<int>{4},
+                },
+
+                new LineChartDataset()
+                {
+                    Label = "Estimerede dage",
+                    Data = new List<double>{ 14, 22, 25, 50, 60, 67 },
+                    BackgroundColor = new List<string>{ "#0d6efd" },
+                    BorderColor = new List<string>{ "0d6efd" },
+                    BorderWidth = new List<double>{2},
+                    HoverBorderWidth = new List<double>{4},
+                    PointBackgroundColor = new List<string>{ "0d6efd" },
+                    PointBorderColor = new List<string>{ "0d6efd" },
+                    PointRadius = new List<int>{0}, 
+                    PointHoverRadius = new List<int>{4},
+                },
+
+            }
+            };
+
+        var options = new LineChartOptions();
+
+        options.Interaction.Mode = InteractionMode.Index;
+
+        options.Responsive = true;
+
+        //options.Scales.X.Title.Text = "Faser";
+        //options.Scales.X.Title.Display = true;
+
+        //options.Scales.Y.Title.Text = "Antal dage";
+        //options.Scales.Y.Title.Display = true;
+
+        await lineChart.InitializeAsync(data, options);
+    }
 }
