--- a/KOMiT/KOMiT.Client/Components/FinishCurrentSubGoal.razor
+++ b/KOMiT/KOMiT.Client/Components/FinishCurrentSubGoal.razor
@@ -29,7 +29,10 @@
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
     [Parameter]
-    public CurrentSubGoal CurrentSubGoal { get; set; }
+    public CurrentSubGoal? CurrentSubGoal { get; set; }
+
+    [Parameter]
+    public ProjectMember? ProjectMember { get; set; }
 
 
     protected override async Task OnInitializedAsync()
@@ -37,15 +40,35 @@
         CurrentSubGoal.Status = Core.Model.Enum.Status.Færdiggjort;
         CurrentSubGoal.RealizedDate = DateTime.Today;
         CurrentSubGoal.CurrentPhaseId = ID;
+        foreach (var currentTask in CurrentSubGoal.CurrentTasks)
+        {
+            currentTask.CurrentSubGoalId = CurrentSubGoal.Id;
+            foreach (var projectMember in currentTask.ProjectMembers)
+            {
+                projectMember.ProjectRole = ProjectMember.ProjectRole;
+            }
+        }
     }
 
     private async Task Create()
     {
-        var response = await http.PutAsJsonAsync("https://localhost:7282/api/CurrentSubGoal/FinishCurrentSubGoal", CurrentSubGoal);
-
-        if (response.IsSuccessStatusCode)
+        try
         {
-            navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+            var response = await http.PutAsJsonAsync("https://localhost:7282/api/CurrentSubGoal/FinishCurrentSubGoal", CurrentSubGoal);
+            if (response.IsSuccessStatusCode)
+            {
+                navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+            }        
+        }
+        catch (HttpRequestException ex)
+        {
+            Console.WriteLine($"HTTP request error: {ex.Message}");
+            throw;
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"An error occurred: {ex.Message}");
+            throw;
         }
     }
 }
